src/test/resources/30/single/opf/valid/prefixes.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid"
		prefix="foaf: http://xmlns.com/foaf/spec/
				dbp:    http://dbpedia.org/ontology/">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <dc:title>Lorem Ipsum</dc:title>        
        <dc:language>la</dc:language>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
		<meta property="meta-auth">Auth</meta>
		<meta property="media:narrator">test</meta>
		<meta property="foaf:test">test</meta>
		<link rel="marc21xml-record foaf:ddd" href="pub/meta/nor-wood-marc21.xml"/>
    </metadata> 
    <manifest>
        <item id="t1" href="lorem.xhtml" properties="nav" media-type="application/xhtml+xml" /> 
		<item properties="scripted mathml" id="c2" href="c1.xhtml" media-type="application/xhtml+xml" />		
		<item properties="foaf:valid" id="c3" href="c2.xhtml" media-type="application/xhtml+xml" />		
		<item properties="foaf:invalid" id="c5" href="c3.xhtml" media-type="application/xhtml+xml" />		
        <item id="css" href="lorem.css" media-type="text/css" />
    </manifest>
    <spine>
        
		<itemref idref="t1" properties="page-spread-left foaf:valid"/>       
		<itemref idref="c2" properties="page-spread-left foaf:valid"/>
		<itemref idref="c3" properties="page-spread-left foaf:valid"/>
    </spine>    
</package>